Implement JavaFX GUI for Event Management System
-Editing README.md to include instructions to build